opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/async_interactive"
bug-reports: "https://github.com/janestreet/async_interactive/issues"
dev-repo: "git+https://github.com/janestreet/async_interactive.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "async"
  "core"
  "ppx_jane"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Utilities for building simple command-line based user interfaces.
"
