opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_interactive"
bug-reports: "https://github.com/janestreet/async_interactive/issues"
dev-repo: "git+https://github.com/janestreet/async_interactive.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_interactive/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"     {>= "4.08.0"}
  "async"     {>= "v0.15" & < "v0.16"}
  "core"      {>= "v0.15" & < "v0.16"}
  "core_unix" {>= "v0.15" & < "v0.16"}
  "ppx_jane"  {>= "v0.15" & < "v0.16"}
  "dune"      {>= "2.0.0"}
  "spawn"     {>= "v0.12"}
]
synopsis: "Utilities for building simple command-line based user interfaces"
description: "
"
