opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/async_interactive"
bug-reports: "https://github.com/janestreet/async_interactive/issues"
dev-repo: "git+https://github.com/janestreet/async_interactive.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/async_interactive/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.08.0"}
  "async"
  "core"
  "core_unix"
  "ppx_jane"
  "dune"      {>= "2.0.0"}
  "spawn"     {>= "v0.15"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Utilities for building simple command-line based user interfaces"
description: "
"
